Custom for Montano

--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -5,9 +5,9 @@
 <footer id="footer">
     <div class="container">
         <div class="left-section">
-            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/svgs/logo-white.svg" alt="logo" width="264" height="78"></a>
+            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/montanologo.png" alt="logo" width="264" height="78"></a>
             <p>
-                Extra content if you need it, if not you can delete this whole p tag. I usually do.
+                Our mission is to create affordable websites that help small businesses achieve their goals.
             </p>
         </div>
         <div class="right-section">
@@ -17,29 +17,29 @@
                         <h2>Information</h2>
                     </li>
                     <li>
-                        <a href="/">Home</a>
+                        <a href="/index">Home</a>
                     </li>
                     <li>
                         <a href="/about">About Us</a>
                     </li>
                     <li>
-                        <a href="/projects">Projects</a>
+                        <a href="/services">Services</a>
                     </li>
                     <li>
-                        <a href="/reviews">Reviews</a>
+                        <a href="/blog">Blog</a>
                     </li>
                     <li>
-                        <a href="/contact">Contact</a>
+                        <a href="/financing">Financing Options</a>
                     </li>
                 </ul>
                 <ul>
                     <li>
                         <h2>Services</h2>
                     </li>
-                    <li>Service1</li>
-                    <li>Service2</li>
-                    <li>Service4</li>
-                    <li>Service5</li>
+                    <li>Plumbing</li>
+                    <li>Gasfitting</li>
+                    <li>Renovation</li>
+                    
                 </ul>
                 <ul>
                     <li>
@@ -56,7 +56,7 @@
                     </li>
                     <li>
                         <a href="tel:{{client.phoneForTel}}">
-                            T:
+                            Contact Number:
                             {{client.phoneFormatted}}
                         </a>
                     </li>
@@ -70,7 +70,7 @@
 
     <div class="credit">
         <span>Designed and Hand Coded by</span>
-        <a href="/" target="_blank" rel="noopener">Your Company Name</a>
+        <a href="/" target="_blank" rel="noopener">Bespoke Web Design</a>
         <span class="copyright">
             Copyright {% year %} - Present</span>
     </div>
