--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -1394,7 +1394,69 @@ html {
   }
 }
                                 
+.cs-button-5 {
+  text-align: center;
+  font-size: 1rem;
+  line-height: 3.5rem;
+  font-weight: 700;
+  text-decoration: none;
+  letter-spacing: 0.05em;
+  min-width: 10.875rem;
+  margin: 0;
+  color: #1a1a1a;
+  padding: 0 1.5rem;
+  /* prevents padding and border from affecting height and width */
+  box-sizing: border-box;
+  background-color: transparent;
+  border: 2px solid #1a1a1a;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  transition: color 0.3s;
+}
+.cs-button-5 .cs-button-text {
+  display: block;
+  /* we translate it up so it looks centered in the white space. The black :before element takes up space at the bottom and makes it looks off-center */
+  transform: translateY(-0.125rem);
+  transition: transform 0.3s, color 0.3s, letter-spacing 0.3s;
+}
+.cs-button-5:before {
+  content: "";
+  width: 100%;
+  height: 0.375rem;
+  background: #4295cd;
+  opacity: 1;
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 0;
+  transition: height 0.3s;
+  z-index: -1;
+}
+.cs-button-5:hover .cs-button-text {
+  color: #fff;
+  letter-spacing: 0.15em;
+}
+.cs-button-5:hover .cs-button-text {
+  transform: translateY(0);
+}
+.cs-button-5:hover:before {
+  height: 100%;
+}
 
+body.dark-mode .cs-button-5 {
+  border-color: #fff;
+}
+body.dark-mode .cs-button-5 .cs-button-text {
+  color: #fff;
+}
+body.dark-mode .cs-button-5:hover .cs-button-text {
+  color: #1a1a1a !important;
+}
+body.dark-mode .cs-button-5:before {
+  background-color: #fff;
+}
+                                
 
 /*-- -------------------------- -->
 <---           Blog             -->
