--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -911,7 +911,7 @@ html {
       background-color: var(--dark);
   }
   body.dark-mode #cs-navigation .cs-logo {
-      background-color: var(--medium);
+      
   }
   body.dark-mode #cs-navigation .cs-li-link {
       color: var(--bodyTextColorWhite);
@@ -1424,7 +1424,7 @@ html {
   content: "";
   width: 100%;
   height: 0.375rem;
-  background: #4295cd;
+  background: #1a1a1a;
   opacity: 1;
   position: absolute;
   display: block;
