--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -300,7 +300,7 @@ html {
       width: 40%;
       max-width: 9.125rem;
       height: 100%;
-      background: var(--primary);
+      background: #00000000;
       opacity: 1;
       position: absolute;
       display: block;
