--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -51,284 +51,269 @@
     opacity: 1;
   }
 }
-
-
-
-
 /*-- -------------------------- -->
-<---          Banner            -->
-<--- -------------------------- -*/
-
+  <---          Banner            -->
+  <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   #banner-1106-1112 {
-      padding: var(--sectionPadding);
-      padding-top: 15.625rem;
-      padding-bottom: 7.5rem;
-      /* clips the line from causing overflow issues for going off screen */
-      overflow: hidden;
-      position: relative;
-      z-index: 1;
+    padding: var(--sectionPadding);
+    padding-top: 15.625rem;
+    padding-bottom: 7.5rem;
+    /* clips the line from causing overflow issues for going off screen */
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
   }
   #banner-1106-1112 .cs-container {
-      text-align: center;
-      width: 100%;
-      max-width: 80rem;
-      margin: auto;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      flex-direction: column;
-      gap: 0.75rem;
+    text-align: center;
+    width: 100%;
+    max-width: 80rem;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 0.75rem;
   }
   #banner-1106-1112 .cs-int-title {
-      /* 39px - 61px */
-      font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
-      font-weight: 900;
-      line-height: 1.2em;
-      text-align: inherit;
-      margin: 0;
-      color: var(--bodyTextColorWhite);
-      position: relative;
+    /* 39px - 61px */
+    font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
+    font-weight: 900;
+    line-height: 1.2em;
+    text-align: inherit;
+    margin: 0;
+    color: var(--bodyTextColorWhite);
+    position: relative;
   }
   #banner-1106-1112 .cs-breadcrumbs {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   #banner-1106-1112 .cs-link {
-      font-size: 1rem;
-      line-height: 1.2em;
-      text-decoration: none;
-      color: var(--bodyTextColorWhite);
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    font-size: 1rem;
+    line-height: 1.2em;
+    text-decoration: none;
+    color: var(--bodyTextColorWhite);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   #banner-1106-1112 .cs-link:last-of-type {
-      /* remove the chevron on the last list item */
+    /* remove the chevron on the last list item */
   }
   #banner-1106-1112 .cs-link:last-of-type::after {
-      display: none;
+    display: none;
   }
   #banner-1106-1112 .cs-link:after {
-      /* chevron */
-      content: "";
-      width: 0.4375rem;
-      height: 0.75rem;
-      margin: 0 1rem;
-      background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/white-chev.svg");
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
-      position: relative;
-      display: block;
+    /* chevron */
+    content: "";
+    width: 0.4375rem;
+    height: 0.75rem;
+    margin: 0 1rem;
+    background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/white-chev.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    display: block;
   }
   #banner-1106-1112 .cs-link.cs-active {
-      color: #ffff;
+    color: #ffff;
   }
   #banner-1106-1112 .cs-background {
-      width: 100%;
-      height: 100%;
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
   }
   #banner-1106-1112 .cs-background:before {
-      /* background color overlay */
-      content: "";
-      position: absolute;
-      display: block;
-      height: 100%;
-      width: 100%;
-      background: -moz-linear-gradient(
-          left,
-          rgba(26, 26, 26, 0.94) 0%,
-          rgba(26, 26, 26, 0) 100%
-      );
-      /* FF3.6-15 */
-      background: -webkit-linear-gradient(
-          left,
-          rgba(26, 26, 26, 0.94) 0%,
-          rgba(254, 254, 254, 0.221) 100%
-      );
-      /* Chrome10-25,Safari5.1-6 */
-      opacity: 1;
-      top: 0;
-      left: 0;
-      z-index: 1;
+    /* background color overlay */
+    content: "";
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background: -moz-linear-gradient(left, rgba(26, 26, 26, 0.94) 0%, rgba(26, 26, 26, 0) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, rgba(26, 26, 26, 0.94) 0%, rgba(254, 254, 254, 0.221) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    opacity: 1;
+    top: 0;
+    left: 0;
+    z-index: 1;
   }
   #banner-1106-1112 .cs-background img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      /* Makes img tag act as a background image */
-      object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* Makes img tag act as a background image */
+    object-fit: cover;
   }
 }
-
 /*-- -------------------------- -->
-<---       Side By Side         -->
-<--- -------------------------- -*/
-
+  <---       Side By Side         -->
+  <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   #sbs-1095-1112 {
-      padding: var(--sectionPadding);
+    padding: var(--sectionPadding);
   }
   #sbs-1095-1112 .cs-container {
-      width: 100%;
-      /* changes to 1280px at desktop */
-      max-width: 34.375rem;
-      margin: auto;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      /* 48px - 64px */
-      gap: clamp(3rem, 6vw, 4rem);
+    width: 100%;
+    /* changes to 1280px at desktop */
+    max-width: 34.375rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
   }
   #sbs-1095-1112 .cs-content {
-      /* set text align to left if content needs to be left aligned */
-      text-align: left;
-      width: 100%;
-      max-width: 32.625rem;
-      display: flex;
-      flex-direction: column;
-      /* centers content horizontally, set to flex-start to left align */
-      align-items: flex-start;
+    /* set text align to left if content needs to be left aligned */
+    text-align: left;
+    width: 100%;
+    max-width: 32.625rem;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: flex-start;
   }
   #sbs-1095-1112 .cs-text {
-      margin-bottom: 1rem;
+    margin-bottom: 1rem;
   }
   #sbs-1095-1112 .cs-text:last-of-type {
-      margin-bottom: 2rem;
+    margin-bottom: 2rem;
   }
   #sbs-1095-1112 .cs-list {
-      max-width: 39.375rem;
-      margin: 0 0 2rem 0;
-      padding: 0;
-      /* clips the bullets to create the half circle */
-      overflow: hidden;
+    max-width: 39.375rem;
+    margin: 0 0 2rem 0;
+    padding: 0;
+    /* clips the bullets to create the half circle */
+    overflow: hidden;
   }
   #sbs-1095-1112 .cs-li {
-      list-style: none;
-      margin: 0 0 0.5rem 0;
-      color: var(--bodyTextColor);
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-start;
-      gap: 0.75rem;
-      position: relative;
+    list-style: none;
+    margin: 0 0 0.5rem 0;
+    color: var(--bodyTextColor);
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 0.75rem;
+    position: relative;
   }
   #sbs-1095-1112 .cs-li:before {
-      /* bullet */
-      content: "";
-      width: 1rem;
-      height: 1rem;
-      margin-top: 0.1875rem;
-      /* make it overflow the parent by half it's width to make an eclipse */
-      margin-left: -0.5rem;
-      background: #4295cd;
-      border-radius: 50%;
-      display: block;
-      /* prevents flexbox from squishing it */
-      flex: none;
+    /* bullet */
+    content: "";
+    width: 1rem;
+    height: 1rem;
+    margin-top: 0.1875rem;
+    /* make it overflow the parent by half it's width to make an eclipse */
+    margin-left: -0.5rem;
+    background: #4295cd;
+    border-radius: 50%;
+    display: block;
+    /* prevents flexbox from squishing it */
+    flex: none;
   }
   #sbs-1095-1112 .cs-info {
-      width: 100%;
-      padding-top: 2rem;
-      border-top: 1px solid #e8e8e8;
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 0.75rem;
-      position: relative;
+    width: 100%;
+    padding-top: 2rem;
+    border-top: 1px solid #e8e8e8;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.75rem;
+    position: relative;
   }
   #sbs-1095-1112 .cs-icon {
-      width: 3.25rem;
-      height: auto;
-      display: block;
-      transition: transform 0.3s;
+    width: 3.25rem;
+    height: auto;
+    display: block;
+    transition: transform 0.3s;
   }
   #sbs-1095-1112 .cs-flex {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.25rem;
   }
   #sbs-1095-1112 .cs-name {
-      /* 20px - 25px */
-      font-size: clamp(1.25rem, 4vw, 1.5625rem);
-      line-height: 1.2em;
-      font-weight: 700;
-      margin: 0;
-      color: var(--headerColor);
-      display: block;
+    /* 20px - 25px */
+    font-size: clamp(1.25rem, 4vw, 1.5625rem);
+    line-height: 1.2em;
+    font-weight: 700;
+    margin: 0;
+    color: var(--headerColor);
+    display: block;
   }
   #sbs-1095-1112 .cs-desc {
-      font-size: 0.875rem;
-      line-height: 1.5em;
-      margin: 0;
-      color: var(--bodyTextColor);
-      display: block;
+    font-size: 0.875rem;
+    line-height: 1.5em;
+    margin: 0;
+    color: var(--bodyTextColor);
+    display: block;
   }
   #sbs-1095-1112 .cs-image-group {
-      /* scales the whole group based on the view width size and stop when that vales equals .789em, resets at desktop */
-      font-size: min(2.09vw, 0.789em);
-      width: 43.375em;
-      height: 43em;
-      display: block;
-      position: relative;
-      z-index: 1;
+    /* scales the whole group based on the view width size and stop when that vales equals .789em, resets at desktop */
+    font-size: min(2.09vw, 0.789em);
+    width: 43.375em;
+    height: 43em;
+    display: block;
+    position: relative;
+    z-index: 1;
   }
   #sbs-1095-1112 .cs-picture {
-      width: 33.875em;
-      height: 38em;
-      position: absolute;
-      bottom: 0;
-      left: 5.5em;
-      z-index: -1;
+    width: 33.875em;
+    height: 38em;
+    position: absolute;
+    bottom: 0;
+    left: 5.5em;
+    z-index: -1;
   }
   #sbs-1095-1112 .cs-picture img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
   }
   #sbs-1095-1112 .cs-stripes {
-      width: 32.625em;
-      height: auto;
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -2;
+    width: 32.625em;
+    height: auto;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
   }
   #sbs-1095-1112 .cs-graphic {
-      width: 11.5em;
-      height: auto;
-      display: block;
-      position: absolute;
-      bottom: 5em;
-      right: 0;
+    width: 11.5em;
+    height: auto;
+    display: block;
+    position: absolute;
+    bottom: 5em;
+    right: 0;
   }
 }
 /* Small Desktop - 1024px */
 @media only screen and (min-width: 64rem) {
   #sbs-1095-1112 .cs-container {
-      max-width: 80rem;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
+    max-width: 80rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
   #sbs-1095-1112 .cs-image-group {
-      font-size: min(1.2vw, 1em);
-      flex: none;
+    font-size: min(1.2vw, 1em);
+    flex: none;
   }
 }
 /* Dark Mode */
@@ -338,24 +323,20 @@
   body.dark-mode #sbs-1095-1112 .cs-li,
   body.dark-mode #sbs-1095-1112 .cs-desc,
   body.dark-mode #sbs-1095-1112 .cs-name {
-      color: var(--bodyTextColorWhite);
+    color: var(--bodyTextColorWhite);
   }
   body.dark-mode #sbs-1095-1112 .cs-text,
   body.dark-mode #sbs-1095-1112 .cs-li,
   body.dark-mode #sbs-1095-1112 .cs-desc {
-      opacity: 0.8;
+    opacity: 0.8;
   }
   body.dark-mode #sbs-1095-1112 .cs-stripes {
-      opacity: 0.2;
+    opacity: 0.2;
   }
 }
-
-
-
-
 /*-- -------------------------- -->
-<---           Header           -->
-<--- -------------------------- -*/
+  <---           Header           -->
+  <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   #header {
@@ -406,8 +387,8 @@
   }
 }
 /*-- -------------------------- -->
-<---   Interior Page Header     -->
-<--- -------------------------- -*/
+  <---   Interior Page Header     -->
+  <--- -------------------------- -*/
 /* Mobile */
 @media only screen and (min-width: 0rem) {
   #int-hero {
@@ -490,8 +471,8 @@
   }
 }
 /*-- -------------------------- -->
-<---        Main Content        -->
-<--- -------------------------- -*/
+  <---        Main Content        -->
+  <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   .blog-container {
@@ -522,8 +503,8 @@
   }
 }
 /*-- -------------------------- -->
-<---    Recent Blog Articles    -->
-<--- -------------------------- -*/
+  <---    Recent Blog Articles    -->
+  <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   .recent-articles {
@@ -688,8 +669,8 @@
   }
 }
 /*-- -------------------------- -->
-<---          Sidebar           -->
-<--- -------------------------- -*/
+  <---          Sidebar           -->
+  <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   .blog-sidebar {
@@ -789,8 +770,8 @@
   }
 }
 /*-- -------------------------- -->
-<---        Blog Articles       -->
-<--- -------------------------- -*/
+  <---        Blog Articles       -->
+  <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   .blog-article {
@@ -927,8 +908,8 @@
   }
 }
 /*-- -------------------------- -->
-<---           Footer           -->
-<--- -------------------------- -*/
+  <---           Footer           -->
+  <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   #cs-footer {
