--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -11,7 +11,7 @@
         </h2>
         <p>
             Need reliable plumbing or contracting services? We've got you covered! From quick fixes to major renovations, our expert team is here to handle it all. Contact us today for a FREE quote and discover why we're the trusted choice in the community. Don't wait—let's get started on your project now!        </p>
-        <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
+        <a href="/contact" class="cs-button-solid">Call for a Quote</a>
     </div>
     <picture>
         <source media="(max-width: 600px)" srcset="/assets/images/cta.jpg">
