update as of 08272024

--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -291,7 +291,6 @@
     overflow: hidden;
     position: relative;
     z-index: -1;
-    background-color: #4295cd;
   }
   #contact-1750 .cs-container {
     width: 100%;
@@ -557,5 +556,429 @@
   }
   body.dark-mode #contact-1750 .cs-dark {
     display: block;
+  }
+}
+/*-- -------------------------- -->
+<---         Subscribe          -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #subscribe-1719 {
+    background-color: #F7F7F7;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    z-index: 1;
+  }
+  #subscribe-1719 .cs-container {
+    width: 100%;
+    /* changes to 1312px at tablet */
+    max-width: 34.375rem;
+    margin: auto;
+    padding: var(--sectionPadding);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #subscribe-1719 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: left;
+    width: 100%;
+    max-width: 39.375rem;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: flex-start;
+    position: relative;
+    z-index: 1;
+  }
+  #subscribe-1719 .cs-title {
+    max-width: 20ch;
+  }
+  #subscribe-1719 .cs-text {
+    margin-bottom: 1rem;
+  }
+  #subscribe-1719 .cs-text:last-of-type {
+    margin-bottom: 2rem;
+  }
+  #subscribe-1719 .cs-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+  #subscribe-1719 .cs-input {
+    font-size: 1rem;
+    width: 100%;
+    height: clamp(2.875rem, 5.5vw, 3.5rem);
+    margin: 0;
+    padding: 0;
+    padding-left: 1.25rem;
+    border: none;
+    /* prevents padding from adding to width and height */
+    box-sizing: border-box;
+    display: block;
+  }
+  #subscribe-1719 .cs-input::placeholder {
+    color: #767676;
+  }
+  #subscribe-1719 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+  }
+  #subscribe-1719 .cs-button-solid:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background: #000;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: width 0.3s;
+  }
+  #subscribe-1719 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #subscribe-1719 .cs-submit {
+    width: 100%;
+    border: none;
+    color: var(--bodyTextColorWhite);
+  }
+  #subscribe-1719 .cs-background {
+    width: 100%;
+    height: 100vw;
+    max-height: 25rem;
+    display: block;
+    order: -1;
+    position: relative;
+    z-index: 2;
+  }
+  #subscribe-1719 .cs-background img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  #subscribe-1719 .cs-floater {
+    /* 296px - 450px */
+    width: clamp(18.5rem, 35vw, 28.125rem);
+    height: auto;
+    mix-blend-mode: soft-light;
+    position: absolute;
+    right: -8.0625rem;
+    top: -9.375rem;
+    z-index: -1;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #subscribe-1719 {
+    flex-direction: row;
+    align-items: stretch;
+  }
+  #subscribe-1719 .cs-container {
+    max-width: 82rem;
+    align-items: flex-start;
+  }
+  #subscribe-1719 .cs-content {
+    width: 45vw;
+    max-width: 39.375rem;
+  }
+  #subscribe-1719 .cs-background {
+    width: 50%;
+    max-height: 100%;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+  }
+}
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #subscribe-1719 .cs-content {
+    /* remove the positioning so the cs-floater is now absolutely positioned to the nearest parent that has a declared position relative, which is the section parent */
+    position: initial;
+  }
+  #subscribe-1719 .cs-form {
+    flex-direction: row;
+  }
+  #subscribe-1719 .cs-button-solid {
+    width: auto;
+  }
+  #subscribe-1719 .cs-floater {
+    top: 50%;
+    left: -12.5rem;
+    transform: translateY(-50%);
+  }
+}
+/* Large Desktop - 1300px */
+@media only screen and (min-width: 81.25rem) {
+  #subscribe-1719 .cs-content {
+    width: 100%;
+  }
+  #subscribe-1719 .cs-background {
+    margin-left: 7.375rem;
+  }
+}
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+  body.dark-mode #subscribe-1719 {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  body.dark-mode #subscribe-1719 .cs-title,
+  body.dark-mode #subscribe-1719 .cs-text {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #subscribe-1719 .cs-text {
+    opacity: 0.8;
+  }
+  body.dark-mode #subscribe-1719 .cs-floater {
+    opacity: 0.1;
+  }
+}
+/*-- -------------------------- -->
+<---            FAQ             -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #faq-708 {
+    position: relative;
+    overflow: hidden;
+  }
+  #faq-708 .cs-container {
+    width: 100%;
+    max-width: 80rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* 40px - 48px */
+    gap: clamp(2.5rem, 5vw, 3rem);
+  }
+  #faq-708 .cs-content {
+    text-align: left;
+    max-width: 33.8125rem;
+    /* move section padding to the cs-content so we can make the cs-picture full width */
+    padding: var(--sectionPadding);
+    padding-top: 0;
+    /* prevents padding and border from affecting height and width */
+    box-sizing: border-box;
+  }
+  #faq-708 .cs-title {
+    /* 20 characters wide including spaces */
+    max-width: 20ch;
+    margin: 0 0 1.5rem 0;
+  }
+  #faq-708 .cs-faq-group {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  #faq-708 .cs-faq-item {
+    list-style: none;
+    width: 100%;
+    border-bottom: 1px solid #e8e8e8;
+    transition: border-bottom 0.3s;
+  }
+  #faq-708 .cs-faq-item.active {
+    border-color: var(--primaryLight);
+  }
+  #faq-708 .cs-faq-item.active .cs-button {
+    color: var(--primary);
+  }
+  #faq-708 .cs-faq-item.active .cs-button:before {
+    background-color: var(--primaryLight);
+    transform: rotate(315deg);
+  }
+  #faq-708 .cs-faq-item.active .cs-button:after {
+    background-color: var(--primaryLight);
+    transform: rotate(-315deg);
+  }
+  #faq-708 .cs-faq-item.active .cs-item-p {
+    height: auto;
+    /* 20px - 24px bottom */
+    padding: 0 0 clamp(1rem, 2vw, 1.5rem) 0;
+    opacity: 1;
+  }
+  #faq-708 .cs-button {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 2vw, 1.25rem);
+    line-height: 1.2em;
+    text-align: left;
+    font-weight: bold;
+    /* 16px - 24px */
+    padding: clamp(1rem, 2.3vw, 1.5rem) 0;
+    border: none;
+    background: transparent;
+    color: var(--headerColor);
+    display: block;
+    width: 100%;
+    position: relative;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  #faq-708 .cs-button:hover {
+    cursor: pointer;
+  }
+  #faq-708 .cs-button:before {
+    /* left line */
+    content: "";
+    width: 0.5rem;
+    height: 0.125rem;
+    background-color: var(--headerColor);
+    opacity: 1;
+    border-radius: 50%;
+    position: absolute;
+    display: block;
+    top: 45%;
+    right: 0.25rem;
+    transform: rotate(45deg);
+    /* animate the transform from the left side of the x axis, and the center of the y */
+    transform-origin: left center;
+    transition: transform 0.5s;
+  }
+  #faq-708 .cs-button:after {
+    /* right line */
+    content: "";
+    width: 0.5rem;
+    height: 0.125rem;
+    background-color: var(--headerColor);
+    opacity: 1;
+    border-radius: 50%;
+    position: absolute;
+    display: block;
+    top: 45%;
+    right: 0.0625rem;
+    transform: rotate(-45deg);
+    /* animate the transform from the right side of the x axis, and the center of the y */
+    transform-origin: right center;
+    transition: transform 0.5s;
+  }
+  #faq-708 .cs-button-text {
+    width: 90%;
+    display: block;
+  }
+  #faq-708 .cs-item-p {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 1.5vw, 1rem);
+    line-height: 1.5em;
+    width: 90%;
+    max-width: 33.8125rem;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    color: var(--bodyTextColor);
+    /* clips the text so it doesn't show up */
+    overflow: hidden;
+    transition: opacity 0.3s, padding-bottom 0.3s;
+  }
+  #faq-708 .cs-graphic {
+    width: 22.5625rem;
+    height: auto;
+    opacity: 0.5;
+    display: none;
+    position: absolute;
+    right: -11.25rem;
+    bottom: 1.875rem;
+  }
+  #faq-708 .cs-picture {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 16rem;
+    z-index: 1;
+  }
+  #faq-708 .cs-picture img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #faq-708 {
+    /* moved seciton padding back to the section */
+    padding: var(--sectionPadding);
+  }
+  #faq-708 .cs-container {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  #faq-708 .cs-picture {
+    width: 50%;
+    max-width: 40.625rem;
+    /* 500px - 750px */
+    height: clamp(31.25rem, 68vw, 46.875rem);
+  }
+  #faq-708 .cs-content {
+    width: 55%;
+    padding: 0;
+  }
+}
+/* Desktop - 1600px */
+@media only screen and (min-width: 100rem) {
+  #faq-708 .cs-graphic {
+    display: block;
+  }
+}
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+  body.dark-mode #faq-708 .cs-topper {
+    color: var(--primaryLight);
+  }
+  body.dark-mode #faq-708 .cs-title,
+  body.dark-mode #faq-708 .cs-item-p {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #faq-708 .cs-faq-item {
+    border-color: rgba(255, 255, 255, 0.2);
+  }
+  body.dark-mode #faq-708 .cs-faq-item.active {
+    border-color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #faq-708 .cs-faq-item.active .cs-button {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #faq-708 .cs-faq-item.active .cs-button:before,
+  body.dark-mode #faq-708 .cs-faq-item.active .cs-button:after {
+    background-color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #faq-708 .cs-button {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #faq-708 .cs-button:before,
+  body.dark-mode #faq-708 .cs-button:after {
+    background-color: var(--bodyTextColorWhite);
   }
 }
