--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -706,7 +706,8 @@
       padding: 0;
       /* prevents padding from affecting height and width */
       box-sizing: border-box;
-      background-color: #3952A2;
+      background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(24,95,201,1) 17%, rgba(16,85,188,1) 39%, rgba(13,65,142,1) 57%, rgba(6,47,107,1) 100%);
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
       position: fixed;
       z-index: 10000;
@@ -727,7 +728,7 @@
       justify-content: space-between;
       align-items: center;
       gap: 1.5rem;
-      background-color: #3952A2;
+      background: rgba(35, 155, 236, 0);
   }
   #cs-navigation .cs-contact-group {
       display: flex;
