--- a/src/assets/css/about copy.css
+++ b/src/assets/css/about copy.css
@@ -182,7 +182,7 @@
     display: block;
     height: 100%;
     width: 100%;
-    background: #1a1a1a75;
+    background: #1a1a1a;
     opacity: 0.24;
     top: 0;
     left: 0;
@@ -229,7 +229,7 @@
     content: "";
     width: 100%;
     height: 100%;
-    background: #1a1a1ac1;
+    background: #1a1a1a;
     opacity: 0.84;
     position: absolute;
     display: block;
