--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -2378,17 +2378,20 @@ body.dark-mode .cs-button-5:before {
   }
 }
 /*-- -------------------------- -->
-  <---       Side By Side         -->
-  <--- -------------------------- -*/
+<---           Steps            -->
+<--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #sbs-1095-1112 {
+  #steps-1209 {
     padding: var(--sectionPadding);
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
   }
-  #sbs-1095-1112 .cs-container {
+  #steps-1209 .cs-container {
+    /* changes to 1280px at tablet */
+    max-width: 44rem;
     width: 100%;
-    /* changes to 1280px at desktop */
-    max-width: 34.375rem;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -2396,162 +2399,116 @@ body.dark-mode .cs-button-5:before {
     /* 48px - 64px */
     gap: clamp(3rem, 6vw, 4rem);
   }
-  #sbs-1095-1112 .cs-content {
+  #steps-1209 .cs-content {
     /* set text align to left if content needs to be left aligned */
-    text-align: left;
+    text-align: center;
     width: 100%;
-    max-width: 32.625rem;
     display: flex;
     flex-direction: column;
     /* centers content horizontally, set to flex-start to left align */
-    align-items: flex-start;
-  }
-  #sbs-1095-1112 .cs-text {
-    margin-bottom: 1rem;
-  }
-  #sbs-1095-1112 .cs-text:last-of-type {
-    margin-bottom: 2rem;
-  }
-  #sbs-1095-1112 .cs-list {
-    max-width: 39.375rem;
-    margin: 0 0 2rem 0;
-    padding: 0;
-    /* clips the bullets to create the half circle */
-    overflow: hidden;
-  }
-  #sbs-1095-1112 .cs-li {
-    list-style: none;
-    margin: 0 0 0.5rem 0;
-    color: var(--bodyTextColor);
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 0.75rem;
-    position: relative;
-  }
-  #sbs-1095-1112 .cs-li:before {
-    /* bullet */
-    content: "";
-    width: 1rem;
-    height: 1rem;
-    margin-top: 0.1875rem;
-    /* make it overflow the parent by half it's width to make an eclipse */
-    margin-left: -0.5rem;
-    background: #4295cd;
-    border-radius: 50%;
-    display: block;
-    /* prevents flexbox from squishing it */
-    flex: none;
-  }
-  #sbs-1095-1112 .cs-info {
-    width: 100%;
-    padding-top: 2rem;
-    border-top: 1px solid #e8e8e8;
-    display: flex;
-    justify-content: flex-start;
     align-items: center;
-    gap: 0.75rem;
-    position: relative;
   }
-  #sbs-1095-1112 .cs-icon {
-    width: 3.25rem;
-    height: auto;
-    display: block;
-    transition: transform 0.3s;
+  #steps-1209 .cs-card-group {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1.25rem;
   }
-  #sbs-1095-1112 .cs-flex {
+  #steps-1209 .cs-item {
+    text-align: center;
+    list-style: none;
+    /* 8px - 48px */
+    padding: 0 clamp(0.5rem, 5vw, 3rem);
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 0.25rem;
-  }
-  #sbs-1095-1112 .cs-name {
-    /* 20px - 25px */
-    font-size: clamp(1.25rem, 4vw, 1.5625rem);
-    line-height: 1.2em;
-    font-weight: 700;
-    margin: 0;
-    color: var(--headerColor);
-    display: block;
-  }
-  #sbs-1095-1112 .cs-desc {
-    font-size: 0.875rem;
-    line-height: 1.5em;
-    margin: 0;
-    color: var(--bodyTextColor);
-    display: block;
-  }
-  #sbs-1095-1112 .cs-image-group {
-    /* scales the whole group based on the view width size and stop when that vales equals .789em, resets at desktop */
-    font-size: min(2.09vw, 0.789em);
-    width: 43.375em;
-    height: 43em;
-    display: block;
+    align-items: center;
     position: relative;
-    z-index: 1;
+    grid-column: span 12;
   }
-  #sbs-1095-1112 .cs-picture {
-    width: 33.875em;
-    height: 38em;
-    position: absolute;
-    bottom: 0;
-    left: 5.5em;
-    z-index: -1;
+  #steps-1209 .cs-item:last-of-type:after {
+    display: none;
   }
-  #sbs-1095-1112 .cs-picture img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    border-radius: 20px;
-  }
-  #sbs-1095-1112 .cs-stripes {
-    width: 32.625em;
-    height: auto;
-    display: block;
+  #steps-1209 .cs-item:after {
+    /* content property isn't set until 768px, to hide the line on mobile */
+    /* 120px - 200px */
+    content: "";
+    width: clamp(7.5rem, 14vw, 12.5rem);
+    height: 5.625rem;
+    background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/orange-dotted-line.svg");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    opacity: 1;
+    display: none;
     position: absolute;
     top: 0;
-    left: 0;
-    z-index: -2;
+    left: clamp(11.5rem, 24vw, 20rem);
   }
-  #sbs-1095-1112 .cs-graphic {
-    width: 11.5em;
-    height: auto;
-    display: block;
-    position: absolute;
-    bottom: 5em;
-    right: 0;
-  }
-}
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-  #sbs-1095-1112 .cs-container {
-    max-width: 80rem;
-    flex-direction: row;
-    justify-content: space-between;
+  #steps-1209 .cs-number {
+    font-size: 1.25rem;
+    font-weight: bold;
+    width: 5.5rem;
+    height: 5.5rem;
+    /* 16px - 32px */
+    margin-bottom: clamp(1rem, 4vw, 2rem);
+    color: var(--primary);
+    background-color: var(--primaryLight);
+    border: 1px solid var(--primary);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
-  #sbs-1095-1112 .cs-image-group {
-    font-size: min(1.2vw, 1em);
-    flex: none;
+  #steps-1209 .cs-icon {
+    width: 2.5rem;
+    height: auto;
+    display: block;
+  }
+  #steps-1209 .cs-h3 {
+    font-size: 1.25rem;
+    line-height: 1.2em;
+    text-align: inherit;
+    margin: 0 0 0.75rem 0;
+    color: var(--headerColor);
+  }
+  #steps-1209 .cs-item-text {
+    font-size: 1rem;
+    line-height: 1.5em;
+    text-align: inherit;
+    max-width: 25.8125rem;
+    margin: 0;
+    color: var(--bodyTextColor);
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #steps-1209 .cs-container {
+    max-width: 80rem;
+  }
+  #steps-1209 .cs-item {
+    grid-column: span 4;
+  }
+  #steps-1209 .cs-item:after {
+    display: block;
   }
 }
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
-  body.dark-mode #sbs-1095-1112 .cs-title,
-  body.dark-mode #sbs-1095-1112 .cs-text,
-  body.dark-mode #sbs-1095-1112 .cs-li,
-  body.dark-mode #sbs-1095-1112 .cs-desc,
-  body.dark-mode #sbs-1095-1112 .cs-name {
+  body.dark-mode #steps-1209 .cs-title,
+  body.dark-mode #steps-1209 .cs-text,
+  body.dark-mode #steps-1209 .cs-item-text,
+  body.dark-mode #steps-1209 .cs-h3 {
     color: var(--bodyTextColorWhite);
   }
-  body.dark-mode #sbs-1095-1112 .cs-text,
-  body.dark-mode #sbs-1095-1112 .cs-li,
-  body.dark-mode #sbs-1095-1112 .cs-desc {
-    opacity: 0.8;
+  body.dark-mode #steps-1209 .cs-number {
+    color: var(--primaryLight);
+    background-color: var(--medium);
   }
-  body.dark-mode #sbs-1095-1112 .cs-stripes {
-    opacity: 0.2;
+  body.dark-mode #steps-1209 .cs-text,
+  body.dark-mode #steps-1209 .cs-item-text {
+    opacity: 0.8;
   }
 }
 /*-- -------------------------- -->
