--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -786,19 +786,22 @@
 
 
                                   
-  /*-- -------------------------- -->
+/*-- -------------------------- -->
 <---            FAQ             -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #faq-708 {
+  #faq-1236 {
+      padding: var(--sectionPadding);
       position: relative;
       overflow: hidden;
+      z-index: 1;
   }
-  #faq-708 .cs-container {
+  #faq-1236 .cs-container {
       width: 100%;
-      max-width: 80rem;
+      /* chnages to 1280px at desktop */
+      max-width: 36.5rem;
       margin: auto;
       display: flex;
       flex-direction: column;
@@ -807,77 +810,96 @@
       /* 40px - 48px */
       gap: clamp(2.5rem, 5vw, 3rem);
   }
-  #faq-708 .cs-content {
-      text-align: left;
-      max-width: 33.8125rem;
-      /* move section padding to the cs-content so we can make the cs-picture full width */
-      padding: var(--sectionPadding);
-      padding-top: 0;
-      /* prevents padding and border from affecting height and width */
-      box-sizing: border-box;
+  #faq-1236 .cs-content {
+      /* set text align to left if content needs to be left aligned */
+      text-align: center;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      /* centers content horizontally, set to flex-start to left align */
+      align-items: center;
   }
 
-  #faq-708 .cs-title {
-      /* 20 characters wide including spaces */
-      max-width: 20ch;
-      margin: 0 0 1.5rem 0;
+  #faq-1236 .cs-title {
+      margin: 0;
   }
-  #faq-708 .cs-faq-group {
+  #faq-1236 .cs-faq-group {
       padding: 0;
       margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      gap: 1rem;
   }
-  #faq-708 .cs-faq-item {
+  #faq-1236 .cs-faq-item {
       list-style: none;
       width: 100%;
-      border-bottom: 1px solid #e8e8e8;
+      background-color: #f7f7f7;
+      padding: 0;
+      box-sizing: border-box;
       transition: border-bottom 0.3s;
   }
-  #faq-708 .cs-faq-item.active {
-      border-color: var(--primaryLight);
+  #faq-1236 .cs-faq-item.active {
+      background-color: #1a1a1a;
   }
-  #faq-708 .cs-faq-item.active .cs-button {
+  #faq-1236 .cs-faq-item.active .cs-button {
       color: var(--primary);
   }
-  #faq-708 .cs-faq-item.active .cs-button:before {
-      background-color: var(--primaryLight);
+  #faq-1236 .cs-faq-item.active .cs-button:before {
+      background-color: var(--primary);
       transform: rotate(315deg);
   }
-  #faq-708 .cs-faq-item.active .cs-button:after {
-      background-color: var(--primaryLight);
+  #faq-1236 .cs-faq-item.active .cs-button:after {
+      background-color: var(--primary);
       transform: rotate(-315deg);
   }
-  #faq-708 .cs-faq-item.active .cs-item-p {
-      height: auto;
-      /* 20px - 24px bottom */
-      padding: 0 0 clamp(1rem, 2vw, 1.5rem) 0;
-      opacity: 1;
+  #faq-1236 .cs-faq-item.active .cs-number {
+      background-color: #1a1a1a;
+      color: var(--primary);
   }
-  #faq-708 .cs-button {
+  #faq-1236 .cs-faq-item.active .cs-number:before {
+      height: 100%;
+      opacity: 0.3;
+  }
+  #faq-1236 .cs-faq-item.active .cs-number:after {
+      width: 100vw;
+      opacity: 0.3;
+  }
+  #faq-1236 .cs-faq-item.active .cs-item-p {
+      height: auto;
+      /* 16px - 24px */
+      padding-top: clamp(1rem, 2.5vw, 1.5rem);
+      padding-bottom: clamp(1rem, 2.5vw, 1.5rem);
+      color: var(--bodyTextColorWhite);
+      opacity: 0.8;
+  }
+  #faq-1236 .cs-button {
       /* 16px - 20px */
       font-size: clamp(1rem, 2vw, 1.25rem);
       line-height: 1.2em;
       text-align: left;
       font-weight: bold;
-      /* 16px - 24px */
-      padding: clamp(1rem, 2.3vw, 1.5rem) 0;
+      width: 100%;
+      padding: 0 2.5rem 0 0;
       border: none;
       background: transparent;
       color: var(--headerColor);
-      display: block;
-      width: 100%;
+      overflow: hidden;
+      display: flex;
+      justify-content: flex-start;
+      align-items: stretch;
+      /* 16px - 24px */
+      gap: clamp(1rem, 2.5vw, 1.5rem);
       position: relative;
       transition:
           background-color 0.3s,
           color 0.3s;
   }
-  #faq-708 .cs-button:hover {
+  #faq-1236 .cs-button:hover {
       cursor: pointer;
   }
-  #faq-708 .cs-button:before {
+  #faq-1236 .cs-button:before {
       /* left line */
       content: "";
       width: 0.5rem;
@@ -888,13 +910,13 @@
       position: absolute;
       display: block;
       top: 45%;
-      right: 0.25rem;
+      right: 1.1875rem;
       transform: rotate(45deg);
       /* animate the transform from the left side of the x axis, and the center of the y */
       transform-origin: left center;
       transition: transform 0.5s;
   }
-  #faq-708 .cs-button:after {
+  #faq-1236 .cs-button:after {
       /* right line */
       content: "";
       width: 0.5rem;
@@ -905,17 +927,65 @@
       position: absolute;
       display: block;
       top: 45%;
-      right: 0.0625rem;
+      right: 1rem;
       transform: rotate(-45deg);
       /* animate the transform from the right side of the x axis, and the center of the y */
       transform-origin: right center;
       transition: transform 0.5s;
   }
-  #faq-708 .cs-button-text {
+  #faq-1236 .cs-number {
+      font-size: 1.25rem;
+      line-height: 1.5em;
+      /* 52px - 72px */
+      width: clamp(3.25rem, 6vw, 4.5rem);
+      color: var(--headerColor);
+      background-color: #e8e8e8;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* prevents flexbox from squishing it */
+      flex: none;
+      position: relative;
+      transition: background-color 0.3s;
+  }
+  #faq-1236 .cs-number:before {
+      /* yellow border right on active */
+      content: "";
+      width: 1px;
+      height: 0;
+      background: var(--primary);
+      opacity: 0;
+      position: absolute;
+      display: block;
+      top: -1px;
+      right: 0;
+      transition:
+          opacity 0.3s,
+          height 0.6s;
+      transition-delay: 0.1s;
+  }
+  #faq-1236 .cs-number:after {
+      /* yellow border bottom on active */
+      content: "";
+      width: 0;
+      height: 1px;
+      background: var(--primary);
+      opacity: 0;
+      position: absolute;
+      display: block;
+      bottom: 0;
+      left: 0;
+      transition:
+          opacity 0.3s,
+          width 1s;
+  }
+  #faq-1236 .cs-button-text {
       width: 90%;
+      /* 16px - 24px */
+      padding: clamp(1rem, 2.5vw, 1.5rem) 0;
       display: block;
   }
-  #faq-708 .cs-item-p {
+  #faq-1236 .cs-item-p {
       /* 14px - 16px */
       font-size: clamp(0.875rem, 1.5vw, 1rem);
       line-height: 1.5em;
@@ -923,97 +993,89 @@
       max-width: 33.8125rem;
       height: 0;
       margin: 0;
-      padding: 0;
+      /* 16px - 24px */
+      padding: 0 clamp(1rem, 2.5vw, 1.5rem);
       opacity: 0;
       color: var(--bodyTextColor);
       /* clips the text so it doesn't show up */
       overflow: hidden;
       transition:
           opacity 0.3s,
-          padding-bottom 0.3s;
+          padding-bottom 0.3s,
+          padding-top 0.3s;
   }
-  #faq-708 .cs-graphic {
-      width: 22.5625rem;
-      height: auto;
-      opacity: 0.5;
+  #faq-1236 .cs-floater {
       display: none;
-      position: absolute;
-      right: -11.25rem;
-      bottom: 1.875rem;
-  }
-  #faq-708 .cs-picture {
-      display: block;
-      position: relative;
-      width: 100%;
-      height: 16rem;
-      z-index: 1;
-  }
-  #faq-708 .cs-picture img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
   }
 }
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-  #faq-708 {
-      /* moved seciton padding back to the section */
-      padding: var(--sectionPadding);
-  }
-  #faq-708 .cs-container {
+/* Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #faq-1236 .cs-container {
+      max-width: 80rem;
       flex-direction: row;
       justify-content: space-between;
+      align-items: stretch;
+  }
+  #faq-1236 .cs-content {
+      text-align: left;
       align-items: flex-start;
   }
-  #faq-708 .cs-picture {
-      width: 50%;
-      max-width: 40.625rem;
-      /* 500px - 750px */
-      height: clamp(31.25rem, 68vw, 46.875rem);
+  #faq-1236 .cs-faq-group {
+      width: 56%;
+      flex: none;
   }
-  #faq-708 .cs-content {
+  #faq-1236 .cs-floater {
       width: 55%;
-      padding: 0;
-  }
-}
-/* Desktop - 1600px */
-@media only screen and (min-width: 100rem) {
-  #faq-708 .cs-graphic {
+      max-width: 42.8125rem;
+      margin-right: 10.625rem;
       display: block;
+      position: absolute;
+      top: clamp(30%, 26vw, 40%);
+      right: 50%;
+      z-index: -1;
   }
 }
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
-  body.dark-mode #faq-708 .cs-topper {
-      color: var(--primaryLight);
-  }
-  body.dark-mode #faq-708 .cs-title,
-  body.dark-mode #faq-708 .cs-item-p {
+  body.dark-mode #faq-1236 .cs-title,
+  body.dark-mode #faq-1236 .cs-item-p {
       color: var(--bodyTextColorWhite);
   }
-  body.dark-mode #faq-708 .cs-faq-item {
-      border-color: rgba(255, 255, 255, 0.2);
+  body.dark-mode #faq-1236 .cs-item-p {
+      opacity: 0.8;
   }
-  body.dark-mode #faq-708 .cs-faq-item.active {
-      border-color: var(--bodyTextColorWhite);
+  body.dark-mode #faq-1236 .cs-faq-item {
+      background-color: rgba(0, 0, 0, 0.2);
   }
-  body.dark-mode #faq-708 .cs-faq-item.active .cs-button {
+  body.dark-mode #faq-1236 .cs-faq-item.active {
+      background-color: rgba(0, 0, 0, 0.6);
+  }
+  body.dark-mode #faq-1236 .cs-faq-item.active .cs-button {
+      color: var(--secondary);
+  }
+  body.dark-mode #faq-1236 .cs-faq-item.active .cs-button:before,
+  body.dark-mode #faq-1236 .cs-faq-item.active .cs-button:after {
+      background-color: var(--secondary);
+  }
+  body.dark-mode #faq-1236 .cs-faq-item.active .cs-number {
+      background-color: rgba(0, 0, 0, 0.2);
+  }
+  body.dark-mode #faq-1236 .cs-button {
       color: var(--bodyTextColorWhite);
   }
-  body.dark-mode #faq-708 .cs-faq-item.active .cs-button:before,
-  body.dark-mode #faq-708 .cs-faq-item.active .cs-button:after {
+  body.dark-mode #faq-1236 .cs-button:before,
+  body.dark-mode #faq-1236 .cs-button:after {
       background-color: var(--bodyTextColorWhite);
   }
-  body.dark-mode #faq-708 .cs-button {
+  body.dark-mode #faq-1236 .cs-number {
+      background-color: rgba(0, 0, 0, 0.2);
       color: var(--bodyTextColorWhite);
   }
-  body.dark-mode #faq-708 .cs-button:before,
-  body.dark-mode #faq-708 .cs-button:after {
-      background-color: var(--bodyTextColorWhite);
+  body.dark-mode #faq-1236 .cs-floater {
+      opacity: 0.1;
   }
 }
+
+                              
 
                               
