--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -279,7 +279,8 @@
   }
   body.scroll #cs-navigation .cs-top-container {
       gap: 0;
-      background-color: #3952A2;
+      background: rgb(35,155,236);
+      background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
   }
   body.scroll #cs-navigation .cs-top-social {
       height: 0;
@@ -342,7 +343,8 @@
       justify-content: space-between;
       align-items: center;
       gap: 1rem;
-      background-color: #3952A2;
+      background: rgb(35,155,236);
+      background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
   }
   #cs-navigation .cs-contact-group {
       display: flex;
@@ -707,7 +709,7 @@
       /* prevents padding from affecting height and width */
       box-sizing: border-box;
       background: rgb(35,155,236);
-background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(24,95,201,1) 17%, rgba(16,85,188,1) 39%, rgba(13,65,142,1) 57%, rgba(6,47,107,1) 100%);
+      background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
       position: fixed;
       z-index: 10000;
@@ -728,7 +730,8 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(24,95,201,1) 17%
       justify-content: space-between;
       align-items: center;
       gap: 1.5rem;
-      background: rgba(35, 155, 236, 0);
+      background: rgb(35,155,236);
+      background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
   }
   #cs-navigation .cs-contact-group {
       display: flex;
@@ -1091,7 +1094,8 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(24,95,201,1) 17%
     text-decoration: none;
     margin: 0;
     padding: 0 1.5rem;
-    background-color: var(--primary);
+    background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
     color: #fff;
     display: inline-block;
     position: relative;
@@ -1252,8 +1256,9 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(24,95,201,1) 17%
     width: 3rem;
     height: 3rem;
     margin-left: auto;
-    background: #4295cd;
-    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.12);
+  
+    background: rgb(35,155,236);
+    background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
     border-radius: 0.75rem;
     display: flex;
     justify-content: center;
@@ -1336,7 +1341,8 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(24,95,201,1) 17%
 @media only screen and (min-width: 0rem) {
   #cta-1693 {
   padding-top: 3%;
-    background-color: var(--primary);
+  background: rgb(35,155,236);
+  background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
     position: relative;
     overflow: hidden;
 height: 150px;
@@ -1381,7 +1387,7 @@ height: 150px;
     box-sizing: border-box;
     padding: 0 1.5rem;
     color: #fff;
-    background-color: #F41E1E;
+    background-color: #f11818;
     display: inline-block;
     position: relative;
     z-index: 1;
@@ -1480,13 +1486,16 @@ height: 150px;
     align-items: center;
   }
   #stats-1738 .cs-item:nth-of-type(1) {
-    background-color: #3951a2de;
+    background: rgb(6,47,107);
+background: linear-gradient(280deg, rgba(6,47,107,1) 0%, rgba(10,56,125,1) 50%, rgba(16,85,188,1) 100%);
   }
   #stats-1738 .cs-item:nth-of-type(2) {
-    background-color: #3951a2d2;
+    background: rgb(13,65,142);
+background: linear-gradient(280deg, rgba(13,65,142,1) 0%, rgba(15,75,165,1) 50%, rgba(24,95,201,1) 100%);
   }
   #stats-1738 .cs-item:nth-of-type(3) {
-    background-color: #3951a2de;
+    background: rgb(6,47,107);
+background: linear-gradient(280deg, rgba(16,85,188,1),  rgba(10,56,125,1) 50%,100%,rgba(6,47,107,1) 0%,);
   }
   #stats-1738 .cs-number {
     /* 49px - 84px */
@@ -1831,6 +1840,7 @@ height: 150px;
     padding: var(--sectionPadding);
     /* removing the side paddings to allow the cards to fit the whole page width */
     padding-right: 0;
+   
     padding-left: 0;
     position: relative;
   }
@@ -1882,11 +1892,13 @@ height: 150px;
   }
   #services-1729 .cs-item:nth-of-type(1),
   #services-1729 .cs-item:nth-of-type(4) {
-    background-color: var(--primary);
+    background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
   }
   #services-1729 .cs-item:nth-of-type(2),
   #services-1729 .cs-item:nth-of-type(3) {
-    background-color: var(--primary);
+    background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
   }
   #services-1729 .cs-picture {
     width: 100%;
@@ -2074,7 +2086,8 @@ height: 150px;
     position: relative;
   }
   #reviews-1088 .cs-item:hover .cs-flex {
-    background-color: var(--primary);
+    background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
   }
   #reviews-1088 .cs-icon {
     width: 3.25rem;
@@ -2115,7 +2128,8 @@ height: 150px;
     width: 100%;
     /* pushes up against the cs-item-text so if there's a different amount of content from the other cards, it will push down and stretch the card to fill the container vertically. This makes all the cards the same height no matter how much content each one has */
     margin-top: auto;
-    background-color: #1a1a1a;
+    background: rgb(6,47,107);
+background: linear-gradient(280deg, rgba(6,47,107,1) 0%, rgba(10,56,125,1) 50%, rgba(16,85,188,1) 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2205,7 +2219,8 @@ height: 150px;
   content: "";
   width: 100%;
   height: 0.375rem;
-  background: #1a1a1a;
+  background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
   opacity: 1;
   position: absolute;
   display: block;
@@ -2509,7 +2524,7 @@ body.dark-mode .cs-button-5:before {
       content: "";
       width: clamp(7.5rem, 14vw, 12.5rem);
       height: 5.625rem;
-      background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/orange-dotted-line.svg");
+      background: url("/assets/images/bludot.svg");
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
@@ -2526,8 +2541,10 @@ body.dark-mode .cs-button-5:before {
       height: 5.5rem;
       /* 16px - 32px */
       margin-bottom: clamp(1rem, 4vw, 2rem);
-      color: var(--primary);
-      background-color: var(--primaryLight);
+      color: #fff;
+      background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
+
       border: 1px solid var(--primary);
       border-radius: 50%;
       display: flex;
@@ -3166,6 +3183,11 @@ body.dark-mode .cs-button-5:before {
   #cta {
     position: relative;
     padding: 3.125rem 0;
+  }
+
+  #cta .cs-button-solid{
+    background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
   }
   #cta .container {
     text-align: center;
