--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -16,7 +16,7 @@
     <picture>
         <source media="(max-width: 600px)" srcset="/assets/images/cta.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/cta.jpg">
-        <img aria-hidden="true" decoding="async" src="/assets/images/cta.jpg" alt="kitchen cabinets" loading="lazy" width="2500" height="1667">
+        <img aria-hidden="true" decoding="async" src="/assets/images/cta.jpg" alt="" loading="lazy" width="2500" height="1667">
     </picture>
 
 </section>
