--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -20,16 +20,16 @@
                         <a href="/index">Home</a>
                     </li>
                     <li>
-                        <a href="/about">About Us</a>
+                        <a href="/plumbingandheating">Plumbing & Heating</a>
                     </li>
                     <li>
-                        <a href="/services">Services</a>
+                        <a href="/constructionandrenovation">Construction & Renovation</a>
                     </li>
                     <li>
                         <a href="/blog">Blog</a>
                     </li>
                     <li>
-                        <a href="/financing">Financing Options</a>
+                        <a href="/contact">Contact Us</a>
                     </li>
                 </ul>
                 <ul>
