--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -272,7 +272,8 @@
   }
   body.scroll #cs-navigation .cs-top-container {
     gap: 0;
-    background-color: #3952A2;
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   }
   body.scroll #cs-navigation .cs-top-social {
     height: 0;
@@ -333,7 +334,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    background-color: #3952A2;
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   }
   #cs-navigation .cs-contact-group {
     display: flex;
@@ -681,7 +683,7 @@
     /* prevents padding from affecting height and width */
     box-sizing: border-box;
     background: #239bec;
-    background: linear-gradient(280deg, #239bec 0%, #185fc9 17%, #1055bc 39%, #0d418e 57%, #062f6b 100%);
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     position: fixed;
     z-index: 10000;
@@ -702,7 +704,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 1.5rem;
-    background: rgba(35, 155, 236, 0);
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   }
   #cs-navigation .cs-contact-group {
     display: flex;
@@ -1055,7 +1058,8 @@
     text-decoration: none;
     margin: 0;
     padding: 0 1.5rem;
-    background-color: var(--primary);
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
     color: #fff;
     display: inline-block;
     position: relative;
@@ -1216,8 +1220,8 @@
     width: 3rem;
     height: 3rem;
     margin-left: auto;
-    background: #4295cd;
-    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.12);
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
     border-radius: 0.75rem;
     display: flex;
     justify-content: center;
@@ -1298,7 +1302,8 @@
 @media only screen and (min-width: 0rem) {
   #cta-1693 {
     padding-top: 3%;
-    background-color: var(--primary);
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
     position: relative;
     overflow: hidden;
     height: 150px;
@@ -1341,7 +1346,7 @@
     box-sizing: border-box;
     padding: 0 1.5rem;
     color: #fff;
-    background-color: #F41E1E;
+    background-color: #f11818;
     display: inline-block;
     position: relative;
     z-index: 1;
@@ -1437,13 +1442,16 @@
     align-items: center;
   }
   #stats-1738 .cs-item:nth-of-type(1) {
-    background-color: #3951a2de;
+    background: #062f6b;
+    background: linear-gradient(280deg, #062f6b 0%, #0a387d 50%, #1055bc 100%);
   }
   #stats-1738 .cs-item:nth-of-type(2) {
-    background-color: #3951a2d2;
+    background: #0d418e;
+    background: linear-gradient(280deg, #0d418e 0%, #0f4ba5 50%, #185fc9 100%);
   }
   #stats-1738 .cs-item:nth-of-type(3) {
-    background-color: #3951a2de;
+    background: #062f6b;
+    background: linear-gradient(280deg, #1055bc, #0a387d 50%, 100%, #062f6b 0%);
   }
   #stats-1738 .cs-number {
     /* 49px - 84px */
@@ -1829,11 +1837,13 @@
   }
   #services-1729 .cs-item:nth-of-type(1),
   #services-1729 .cs-item:nth-of-type(4) {
-    background-color: var(--primary);
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   }
   #services-1729 .cs-item:nth-of-type(2),
   #services-1729 .cs-item:nth-of-type(3) {
-    background-color: var(--primary);
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   }
   #services-1729 .cs-picture {
     width: 100%;
@@ -2017,7 +2027,8 @@
     position: relative;
   }
   #reviews-1088 .cs-item:hover .cs-flex {
-    background-color: var(--primary);
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   }
   #reviews-1088 .cs-icon {
     width: 3.25rem;
@@ -2058,7 +2069,8 @@
     width: 100%;
     /* pushes up against the cs-item-text so if there's a different amount of content from the other cards, it will push down and stretch the card to fill the container vertically. This makes all the cards the same height no matter how much content each one has */
     margin-top: auto;
-    background-color: #1a1a1a;
+    background: #062f6b;
+    background: linear-gradient(280deg, #062f6b 0%, #0a387d 50%, #1055bc 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2147,7 +2159,8 @@
   content: "";
   width: 100%;
   height: 0.375rem;
-  background: #1a1a1a;
+  background: #239bec;
+  background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   opacity: 1;
   position: absolute;
   display: block;
@@ -2436,7 +2449,7 @@ body.dark-mode .cs-button-5:before {
     content: "";
     width: clamp(7.5rem, 14vw, 12.5rem);
     height: 5.625rem;
-    background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/orange-dotted-line.svg");
+    background: url("/assets/images/bludot.svg");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -2453,8 +2466,9 @@ body.dark-mode .cs-button-5:before {
     height: 5.5rem;
     /* 16px - 32px */
     margin-bottom: clamp(1rem, 4vw, 2rem);
-    color: var(--primary);
-    background-color: var(--primaryLight);
+    color: #fff;
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
     border: 1px solid var(--primary);
     border-radius: 50%;
     display: flex;
@@ -3068,6 +3082,10 @@ body.dark-mode .cs-button-5:before {
   #cta {
     position: relative;
     padding: 3.125rem 0;
+  }
+  #cta .cs-button-solid {
+    background: #239bec;
+    background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
   }
   #cta .container {
     text-align: center;
